--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body{
 .header{
     padding:20px;
     background-color:black;
-    box-shadow: 0px 4px #111111;
+    box-shadow: 5px 10px 18px rgb(82, 82, 82);
 }
 
 
@@ -56,8 +56,9 @@ img{
 }
 
 img:hover{
-    height: 290px;
-    width: auto;
+    border: 3px solid rgb(255, 14, 255);
+    box-shadow: 5px 10px 18px rgb(99, 0, 99);
+    
 }
 
 .pp{
