--- a/index.css
+++ b/index.css
@@ -6,10 +6,10 @@ body{
     display:flex;
     flex-direction:column;
     text-align:center;
-    color:black;
+    color:rgb(0, 0, 0);
     margin:0;
     padding:0;
-    background-color: rgb(98, 255, 25);
+    background-image: linear-gradient(to bottom right, rgb(208, 255, 0), rgb(0, 255, 85));
     justify-content:space-between;
     height: 100%;
 
